<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable name = "name" type = "String"/>
    <variable name = "nickname" type = "String"/>
    <variable name = "age" type = "String"/>

</data>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="592dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/viewName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{name}"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/viewNickname2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{nickname}"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ViewAge4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{age}"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00810000"
                android:text="@string/answer"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_name"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/viewNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_nickname"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/viewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age2" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/viewBday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_is_your_birthday" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_birthday"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/viewCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_course" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_course"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_color" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_color"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_special_dream" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_dream_and_never_return"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_is_your_secret_crush" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_crush"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mssg" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />
</LinearLayout>
</layout>